--- a/frontend/frontend/src/app/components/header/header.component.html
+++ b/frontend/frontend/src/app/components/header/header.component.html
@@ -9,15 +9,16 @@
       <li class="nav-item">
         <a class="nav-link" href="/books">Books</a>
       </li>
+      <li class="nav_item">
+        <a class="nav-link" href="/users">Users</a>
+      </li>
       <li class="nav-item">
-        <a class="nav-link" href="/requests">All Requests</a>
+        <a class="nav-link" href="/requests">Requests</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/trades">Trades</a>
       </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/users">All users</a>
-      </li>
+
       <li class="nav-item dropdown" style=" text-align: right;" ngbDropdown>
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle" ngbDropdownToggle>
