--- a/frontend/frontend/src/app/components/trades/trades.component.html
+++ b/frontend/frontend/src/app/components/trades/trades.component.html
@@ -1,12 +1,13 @@
 <app-header></app-header>
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container pb-5 mb-2">
+<div class="container pb-5 mb-2 my-4">
   <!--Item-->
-  <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of requests">
+  <h3 class="ml-3">All trades</h3>
+  <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of trades">
     <div class="px-3 my-3">
       <a class="cart-item-product" href="https://www.google.com/search?q={{r.bookToGive.name}}">
-        <div class="cart-item-product-thumb"><img src="{{r.bookToGive.imgUrl}}" alt="Product"></div>
+        <div class="cart-item-product-thumb"><img src="{{r.bookToGive.imgUrl}}" alt="Book"></div>
         <div class="cart-item-product-info">
           <h4 class="cart-item-product-title">{{r.bookToGive.name}}</h4><span><strong>Description:
             </strong>{{r.bookToGive.description}}
@@ -14,9 +15,9 @@
         </div>
       </a>
     </div>
-    <div class="px-3 my-3 text-center">
+    <div class="px-3 my-3">
       <a class="cart-item-product" href="https://www.google.com/search?q={{r.wantedBook.name}}">
-        <div class="cart-item-product-thumb"><img src="{{r.wantedBook.imgUrl}}" alt="Product"></div>
+        <div class="cart-item-product-thumb"><img src="{{r.wantedBook.imgUrl}}" alt="Book"></div>
         <div class="cart-item-product-info">
           <h4 class="cart-item-product-title">{{r.wantedBook.name}}</h4><span><strong>Description:
             </strong>{{r.wantedBook.description}}
