--- a/frontend/frontend/src/app/components/book/book.component.html
+++ b/frontend/frontend/src/app/components/book/book.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
+<div class="container my-4">
   <div class="row">
     <div class="col-md-3" *ngFor="let book of books">
       <div class="ibox">
@@ -27,7 +27,7 @@
                     class="btn btn-xs btn-outline btn-primary">More Info <i class="fa fa-long-arrow-right"></i> </a>
                 </div>
                <!-- <div class="col"><a class="btn btn-xs btn-outline btn-primary" href="/createRequest">Request</a> </div> -->
-               <div class="col">
+               <div class="col" *ngIf="user && book.owner.username != user">
                 <button class="btn btn-xs btn-outline btn-primary" (click)="navigateToRequest(book.id)">Request</button>
               </div>
               </div>
