--- a/frontend/frontend/src/app/components/create-request/create-request.component.html
+++ b/frontend/frontend/src/app/components/create-request/create-request.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="cotainer">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
@@ -54,5 +54,8 @@
         </div>
       </div>
     </div>
+  </div>
+  <div *ngIf="hasError">
+    <span class="text-danger">{{error}}</span>
   </div>
 </div>
