--- a/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
+++ b/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
-<div class="container bootstrap snippets bootdey">
-  <h1 class="text-primary"><span class="glyphicon glyphicon-user"></span>Edit Profile</h1>
+<div class="container bootstrap snippets bootdey my-4 p-5 w-75">
+  <h1><span class="glyphicon glyphicon-user"></span>Edit Profile</h1>
   <hr>
   <div class="row">
     <!-- left column -->
@@ -20,45 +20,39 @@
         <i class="fa fa-coffee"></i>
         This is an <strong>.alert</strong>. editing the user profile.
       </div> -->
-      <h3>Information</h3>
-
+      <h3 class="ml-3">Information for {{user.username}}</h3>
+      <br>
       <form class="form-horizontal" role="form" *ngIf="user" #useredit="ngForm" (ngSubmit)="onSubmit(useredit.value)">
         <div class="form-group">
-          <div class="col-lg-8">
-            <label class="col-lg-3 control-label">{{user.username}}</label>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-3 control-label">Full Name:</label>
+          <label class="col-lg-3 control-label font-weight-bold">Full Name:</label>
           <div class="col-lg-8">
             <input class='form-control' type="text" [(ngModel)]="user.fullName" placeholder="{{user.fullName}}"
               name="fullName" ngModel>
           </div>
         </div>
         <div class="form-group">
-          <label class="col-lg-3 control-label">State:</label>
+          <label class="col-lg-3 control-label font-weight-bold">State:</label>
           <div class="col-lg-8">
             <input class="form-control" type="text" [(ngModel)]="user.state" name="state" placeholder="{{user.state}}"
               ngModel>
           </div>
         </div>
         <div class="form-group">
-          <label class="col-lg-3 control-label">City:</label>
+          <label class="col-lg-3 control-label font-weight-bold">City:</label>
           <div class="col-lg-8">
             <input class="form-control" type="text" [(ngModel)]="user.city" name="city" placeholder="{{user.city}}"
               ngModel>
           </div>
         </div>
         <div class="form-group">
-          <label class="col-lg-3 control-label">Address:</label>
+          <label class="col-lg-3 control-label font-weight-bold">Address:</label>
           <div class="col-lg-8">
             <input class='form-control' type="text" [(ngModel)]="user.address" name="address"
               placeholder="{{user.address}}" ngModel>
           </div>
         </div>
-        <button class='btn btn-primary' type="submit" value="submiy">Save changes</button>
+        <button class='btn btn-primary ml-3' type="submit" value="submiy">Save changes</button>
       </form>
     </div>
   </div>
 </div>
-<hr>
