--- a/frontend/frontend/src/app/components/my-books/my-books.component.html
+++ b/frontend/frontend/src/app/components/my-books/my-books.component.html
@@ -1,11 +1,12 @@
-
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
+<div class="container mb-3 mt-1">
   <div class="row">
-    <div class="col-md-3" *ngFor="let book of books">
-      <div class="ibox">
+    <h4 class="ml-3">AVAILABLE</h4>
+    <div *ngIf="availableBooks.length > 0" >
+    <div class="col-md-3" style="display: inline;" *ngFor="let book of availableBooks">
+      <div class="ibox" style="display: inline-block !important;">
         <div class="ibox-content product-box">
-          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%;">
+          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: cover; background-repeat: no-repeat;">
           </div>
           <div class="product-desc">
             <span class="product-price">
@@ -16,23 +17,50 @@
               {{book.description}}
             </div>
             <hr>
-            <br>
-            <div class="m-t text-righ grid">
-              <div class="row">
-                <td *ngIf="book.status =='AVAILABLE'">
-                  <div class="col-sm">
-                    <button class="btn btn-warning" [routerLink]="['/editBook']" [state]="book">Edit book</button>
-                  </div>
-                  <div class="col-sm">
-                    <button class="btn btn-danger" (click)='delete(book.id)'> Delete </button>
-                  </div>
-                </td>
+          </div>
+          <div class="btn-group btn-group-sm ml-3" role="group">
+            <button class="btn btn-warning mr-1" routerLink="/editBook/{{book.id}}" [state]="book">Edit book</button>
+            <button class="btn btn-danger" (click)='delete(book.id)'> Delete </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    </div>
+    <div *ngIf="availableBooks.length < 1" >
+      <span class="ml-3">There aren't any available books. Click <a routerLink="/addBook">here</a> to add a new book.</span>
+    </div>
+    </div>
+</div>
+<div class="container mn-3 mt-1">
+    <div class="row mt-5">
+      <h4 class="ml-3">TAKEN</h4>
+      <div *ngIf="takenBooks.length > 0" >
+      <div class="col-md-3" style="display: inline;" *ngFor="let book of takenBooks">
+        <div class="ibox" style="display: inline-block !important;">
+          <div class="ibox-content product-box">
+            <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%;">
+            </div>
+            <div class="product-desc">
+              <span class="product-price bg-danger ">
+                {{book.status}}
+              </span>
+              <h5 class="product-name"> {{book.name}}</h5>
+              <div class="small m-t-xs">
+                {{book.description}}
+              </div>
+              <hr>
+              <br>
+              <div class="m-t text-righ grid">
+
+              </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+      <div *ngIf="takenBooks.length < 1" >
+        <span class="ml-3">There aren't any taken books. A book will be considered as taken if you accept a request for that book.</span>
+      </div>
   </div>
-  <!-- <button class="btn btn-primary" routerLink="/addBook">Add book</button> -->
 </div>
