--- a/frontend/frontend/src/app/components/register/register.component.html
+++ b/frontend/frontend/src/app/components/register/register.component.html
@@ -1,38 +1,15 @@
-<!-- <form #useregister = "ngForm" (ngSubmit) = "onSubmit(useregister.value)">
-  <label for="username">Username</label>
-  <input type="text" id="username" name="username" placeholder="Username" ngModel>
-  <br/>
-  <label for="password">Password</label>
-  <input type="password" id="password" name="password" placeholder="Password" ngModel>
-  <br/>
-  <label for="fullName">Full name</label>
-  <input type="text" id="fullName" name="fullName" placeholder="Full name" ngModel>
-  <br/>
-  <label for="city">City</label>
-  <input type="text" id="city" name="city" placeholder="Address" ngModel>
-  <br/>
-  <label for="state">State</label>
-  <input type="text" id="state" name="state" placeholder="State" ngModel>
-  <br/>
-  <label for="address">Address</label>
-  <input type="text" id="address" name="address" placeholder="Address" ngModel>
-<br>
-  <button type="submit" value="submit">Submit</button>
-</form> -->
-
 <h1>Book Trading Club</h1>
-
 <div class="cotainer">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Register</div>
+        <div class="card-header"><h3>Register</h3></div>
         <div class="card-body">
-          <form class="text-center border border-light p-5" #useregister="ngForm"
+          <form class="text-center border py-5" #useregister="ngForm"
             (ngSubmit)="onSubmit(useregister.value)">
             <!--Username-->
             <div class="form-group row">
-              <label for="username" class="col-md-4 col-form-label text-md-right">Username</label>
+              <label for="username" class="col-md-4 col-form-label text-md-right">Username*</label>
               <div class="col-md-6">
                 <input type="text" id="username" name="username" class="form-control mb-4" placeholder="Username"
                   ngModel required>
@@ -40,38 +17,41 @@
             </div>
             <!-- Password -->
             <div class="form-group row">
-              <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+              <label for="password" class="col-md-4 col-form-label text-md-right">Password*</label>
               <div class="col-md-6">
-                <input type="password" id="password" name="password" class="form-control mb-4" ngModel required>
+                <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password" ngModel>
               </div>
             </div>
             <!--Full Name-->
             <div class="form-group row">
-              <label for="fullName" class="col-md-4 col-form-label text-md-right">Full Name</label>
+              <label for="fullName" class="col-md-4 col-form-label text-md-right">Full Name*</label>
               <div class="col-md-6">
-                <input type="fullName" id="fullName" name="fullName" class="form-control mb-4" ngModel>
+                <input type="fullName" id="fullName" name="fullName" class="form-control mb-4" placeholder="Full name" ngModel>
               </div>
             </div>
             <!--State-->
             <div class="form-group row">
-              <label for="state" class="col-md-4 col-form-label text-md-right">State</label>
+              <label for="state" class="col-md-4 col-form-label text-md-right">State*</label>
               <div class="col-md-6">
-                <input type="state" id="state" name="state" class="form-control mb-4" ngModel>
+                <input type="state" id="state" name="state" class="form-control mb-4" placeholder="State" ngModel>
               </div>
             </div>
             <!--City-->
             <div class="form-group row">
-              <label for="city" class="col-md-4 col-form-label text-md-right">City</label>
+              <label for="city" class="col-md-4 col-form-label text-md-right">City*</label>
               <div class="col-md-6">
-                <input type="city" id="city" name="city" class="form-control mb-4" ngModel>
+                <input type="city" id="city" name="city" class="form-control mb-4" placeholder="City" ngModel>
               </div>
             </div>
             <!--Address-->
             <div class="form-group row">
-              <label for="address" class="col-md-4 col-form-label text-md-right">Address</label>
+              <label for="address" class="col-md-4 col-form-label text-md-right">Address*</label>
               <div class="col-md-6">
-                <input type="address" id="address" name="address" class="form-control mb-4" ngModel>
+                <input type="address" id="address" name="address" class="form-control mb-4" placeholder="Address" ngModel>
               </div>
+            </div>
+            <div class="col-md-6 offset-md-4" *ngIf="hasError">
+              <span class="text-danger">{{error}}.Please try again.</span>
             </div>
             <!--  button -->
             <div class="col-md-6 offset-md-4">
@@ -79,7 +59,6 @@
               <br>
               <a routerLink="/login">Login</a>
             </div>
-
           </form>
         </div>
       </div>
