--- a/frontend/frontend/src/app/components/users/users.component.css
+++ b/frontend/frontend/src/app/components/users/users.component.css
@@ -1,42 +1,6 @@
-/* body{
-  background:#DCDCDC;
-  margin-top:20px;
+.container{
+  margin-left: 18%;
 }
-.card-box {
-  padding: 20px;
-  border-radius: 3px;
-  margin-bottom: 30px;
-  background-color: #fff;
-}
-
-
-
-
-.thumb-lg {
-  height: 88px;
-  width: 88px;
-}
-.img-thumbnail {
-  padding: .25rem;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
-  border-radius: .25rem;
-  max-width: 100%;
-  height: auto;
-}
-.text-pink {
-  color: #ff679b!important;
-}
-.btn-rounded {
-  border-radius: 2em;
-}
-.text-muted {
-  color: #98a6ad!important;
-}
-h4 {
-  line-height: 22px;
-  font-size: 18px;
-} */
 
 .social-links li a:hover {
   color: #797979;
