--- a/frontend/frontend/src/app/components/book/book.component.html
+++ b/frontend/frontend/src/app/components/book/book.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-3" *ngFor="let book of books">
       <div class="ibox">
         <div class="ibox-content product-box">
-          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%;">
+          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 80px; margin-right: 80px;">
           </div>
           <div class="product-desc">
             <span class="product-price">
@@ -38,5 +38,3 @@
     </div>
   </div>
 </div>
-
-
