--- a/frontend/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/frontend/src/app/components/user-profile/user-profile.component.html
@@ -6,7 +6,7 @@
       <div class="text-center card-box">
         <div class="member-card">
           <div class="thumb-xl member-thumb m-b-10 center-block">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" class="img-circle img-thumbnail" alt="profile-image">
+            <img src={{user.imgUrl}} class="img-circle img-thumbnail" alt="profile-image" >
           </div>
           <div class="">
             <h4 class="m-b-5">{{user.fullName}}</h4>
@@ -19,13 +19,13 @@
           </div>
           <ul class="social-links list-group list-group-horizontal text-center">
             <li>
-              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
+              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.facebook.com/" data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
+              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.twitter.com/" data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Skype"><i class="fa fa-skype"></i></a>
+              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.skype.com/" data-original-title="Skype"><i class="fa fa-skype"></i></a>
             </li>
           </ul>
         </div>
