--- a/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
+++ b/frontend/frontend/src/app/components/edit-profile/edit-profile.component.html
@@ -7,9 +7,7 @@
     <!-- left column -->
     <div class="col-md-3">
       <div class="text-center">
-        <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-        <h6>Upload a different photo...</h6>
-        <input type="file" class="form-control">
+        <img src={{user.imgUrl}} class="avatar img-circle" alt="avatar" style="height: 200px; width: 100;">
       </div>
     </div>
 
@@ -49,6 +47,13 @@
           <div class="col-lg-8">
             <input class='form-control' type="text" [(ngModel)]="user.address" name="address"
               placeholder="{{user.address}}" ngModel>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label font-weight-bold">Profile picture</label>
+          <div class="col-lg-8">
+            <input class='form-control' type="text" [(ngModel)]="user.imgUrl" name="imgUrl"
+              placeholder="{{user.imgUrl}}" ngModel>
           </div>
         </div>
         <button class='btn btn-primary ml-3' type="submit" value="submiy">Save changes</button>
