--- a/frontend/frontend/src/app/components/header/header.component.html
+++ b/frontend/frontend/src/app/components/header/header.component.html
@@ -7,42 +7,64 @@
         BookTradingClub
       </a>
       <li class="nav-item">
-        <a class="nav-link" href="/books">Books</a>
-      </li>
-      <li class="nav_item">
-        <a class="nav-link" href="/users">Users</a>
+       <h5> <a class="nav-link" href="/books">Books</a></h5>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/requests">Requests</a>
+      <h5> <a class="nav-link" href="/users">Users</a></h5>
+     </li>
+      <li class="nav-item">
+      <h5> <a class="nav-link" href="/requests">Requests</a></h5>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/trades">Trades</a>
+      <h5> <a class="nav-link" href="/trades">Trades</a></h5>
       </li>
-
-      <li class="nav-item dropdown" style=" text-align: right;" ngbDropdown>
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle" ngbDropdownToggle>
+      <li *ngIf="user != undefined" class="nav-item dropdown"  id="profile" ngbDropdown>
+        <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img src='https://toppng.com/uploads/preview/user-account-management-logo-user-icon-11562867145a56rus2zwu.png' width="40" height="40" class="rounded-circle" ngbDropdownToggle>
         </a>
         <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="navbarScrollingDropdown">
           <li *ngIf="user" ngbDropdownItem><a class="dropdown-item" href="/user/profile">My Profile</a></li>
-
           <li *ngIf="user" class="nav-item">
-            <button class='nav-link' (click)="logout()">Logout</button>
+            <button class='btn btn-primary  nav-link' (click)="logout()">Logout</button>
           </li>
         </ul>
-      </li>
-
-      <li *ngIf="user == undefined" class="nav-link pull-right">
-        <a class="nav-link" routerLink="/register">Register</a>
-      </li>
-      <li *ngIf="user == undefined" class="nav-link">
-        <a class="nav-link" routerLink="/login">Login</a>
       </li>
 
 
     </ul>
   </div>
 </nav>
+
+
+<div class="jumbotron jumbotron-fluid bg-dark"  *ngIf="user == undefined">
+
+  <div class="jumbotron-background">
+    <img src="https://www.wallpapersdsc.net/wp-content/uploads/2017/10/Books-Wallpaper-for-Laptop.jpg">
+  </div>
+
+  <div class="container text-white">
+
+    <h1 class="display-4">Hello, hello!</h1>
+    <p class="lead">Trade your old books for exciting new reads</p>
+    <hr class="my-4">
+    <p>An easy and fun way to trade books you no longer
+      need for those you want to read.</p>
+      <div class="row text-center">
+        <div class="col-sm-1">
+          <button class="btn btn-primary" routerLink="/login">Login</button>
+        </div>
+        <div class="col-sm-1">
+          <button class="btn btn-primary" routerLink="/register">Register</button>
+        </div>
+      </div>
+
+  </div>
+
+</div>
+
+
+
+
 
 
 
