--- a/frontend/frontend/src/app/components/incoming-requests/incoming-requests.component.html
+++ b/frontend/frontend/src/app/components/incoming-requests/incoming-requests.component.html
@@ -4,20 +4,21 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container pb-5 mb-2">
   <!--Item-->
-  <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of incomingRequests">
-    <span class="remove-item" (click)="reject(r.requestId)"><i class="fa fa-times"></i></span>
 
-    <div class="px-3 my-3">
+  <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of incomingRequests"  >
+    <span class="remove-item" (click)="reject(r.requestId)"  *ngIf="r.status == 'PENDING'"><i class="fa fa-times"></i></span>
+    <div class="px-3 my-3" *ngIf="r.status == 'PENDING'" >
       <a class="cart-item-product" href="https://www.google.com/search?q={{r.bookToGive.name}}">
         <div class="cart-item-product-thumb"><img src="{{r.bookToGive.imgUrl}}" alt="Product"></div>
         <div class="cart-item-product-info">
           <h4 class="cart-item-product-title">{{r.bookToGive.name}}</h4><span><strong>Description:
-            </strong>{{r.bookToGive.description}}
+            </strong>{{r.bookToGive.description}} ||||||
+            {{r.status}}
           </span>
         </div>
       </a>
     </div>
-    <div class="px-3 my-3 text-center">
+    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'" >
       <a class="cart-item-product" href="https://www.google.com/search?q={{r.wantedBook.name}}">
         <div class="cart-item-product-thumb"><img src="{{r.wantedBook.imgUrl}}" alt="Product"></div>
         <div class="cart-item-product-info">
@@ -28,17 +29,16 @@
       </a>
     </div>
 
-    <div class="px-3 my-3 text-center">
+    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'">
       <div class="cart-item-label">From: </div><span
         class="text-xl font-weight-medium">{{r.bookToGive.owner.fullName}}</span>
     </div>
-    <div class="px-3 my-3 text-center">
+    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'">
       <div class="cart-item-label">To: </div><span
         class="text-xl font-weight-medium">{{r.wantedBook.owner.fullName}}</span>
     </div>
-    <div class="px-3 my-3 text-center">
+    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'">
       <button class="btn btn-success btn-bg" (click)="accept(r.requestId)">Accept</button>
     </div>
   </div>
-
 </div>
