--- a/frontend/frontend/src/app/components/add-book/add-book.component.html
+++ b/frontend/frontend/src/app/components/add-book/add-book.component.html
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header text-light">Add Book</div>
+        <div class="card-header">Add Book</div>
         <div class="card-body">
           <form #addbook="ngForm" (ngSubmit)="onSubmit(addbook.value)">
             <div class="col-md-6 graphicdesign illustrator photography">
@@ -15,19 +15,19 @@
             <div class="col-md-6 graphicdesign illustrator photography">
               <div class="form-group">
                 <label class="col-md-4 col-form-label text-md-right" for="description">Description</label>
-                <input type="text" name="description" id="description" placeholder="Desciption..." ngModel>
+                <input type="text" name="description" id="description" placeholder="Description" ngModel>
               </div>
             </div>
             <div class="col-md-6 graphicdesign illustrator photography">
               <div class="form-group">
                 <label class="col-md-4 col-form-label text-md-right" for="img">Image Url</label>
-                <input type="text" name="img" id="img" placeholder="url..." ngModel>
+                <input type="text" name="img" id="img" placeholder="Image url" ngModel>
               </div>
             </div>
             <div class="col-md-6 graphicdesign illustrator photography">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="col-md-4 col-form-label text-md-rightt">
-                  <button type="submit" value="submit" class="btn btn-primary">Submit</button>
+                <div class="col-md-4 col-form-label text-right">
+                  <button type="submit" value="submit" class="btn btn-primary" style="float: right;">Submit</button>
                 </div>
               </div>
             </div>
