Code refactoring in Frontend

--- a/frontend/frontend/src/app/components/login/login.component.html
+++ b/frontend/frontend/src/app/components/login/login.component.html
@@ -1,5 +1,4 @@
 <h1>Book Trading Club</h1>
-
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
@@ -18,7 +17,8 @@
             <div class="form-group row">
               <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
               <div class="col-md-6">
-                <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password" ngModel>
+                <input type="password" id="password" name="password" class="form-control mb-4" placeholder="Password"
+                  ngModel>
               </div>
             </div>
             <!-- Sign in button -->
