--- a/frontend/frontend/src/app/components/my-books/my-books.component.html
+++ b/frontend/frontend/src/app/components/my-books/my-books.component.html
@@ -2,44 +2,47 @@
 <div class="container mb-3 mt-1">
   <div class="row">
     <h4 class="ml-3">AVAILABLE</h4>
-    <div *ngIf="availableBooks.length > 0" >
-    <div class="col-md-3" style="display: inline;" *ngFor="let book of availableBooks">
-      <div class="ibox" style="display: inline-block !important;">
-        <div class="ibox-content product-box">
-          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 20px; margin-right: 20px;">
-          </div>
-          <div class="product-desc">
-            <span class="product-price">
-              {{book.status}}
-            </span>
-            <h5 class="product-name"> {{book.name}}</h5>
-            <div class="small m-t-xs">
-              {{book.description}}
+    <div *ngIf="availableBooks.length > 0">
+      <div class="col-md-3" style="display: inline;" *ngFor="let book of availableBooks">
+        <div class="ibox" style="display: inline-block !important;">
+          <div class="ibox-content product-box">
+            <div class="product-imitation"
+              style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 20px; margin-right: 20px;">
             </div>
-            <hr>
+            <div class="product-desc">
+              <span class="product-price">
+                {{book.status}}
+              </span>
+              <h5 class="product-name"> {{book.name}}</h5>
+              <div class="small m-t-xs">
+                {{book.description}}
+              </div>
+              <hr>
+            </div>
+            <div class="btn-group btn-group-sm ml-3" role="group">
+              <button class="btn btn-warning mr-1" routerLink="/editBook/{{book.id}}" [state]="book">Edit book</button>
+              <button class="btn btn-danger" (click)='delete(book.id)'> Delete </button>
+            </div>
           </div>
-          <div class="btn-group btn-group-sm ml-3" role="group">
-            <button class="btn btn-warning mr-1" routerLink="/editBook/{{book.id}}" [state]="book">Edit book</button>
-            <button class="btn btn-danger" (click)='delete(book.id)'> Delete </button>
-          </div>
-        </div>
 
+        </div>
       </div>
     </div>
+    <div *ngIf="availableBooks.length &lt; 1">
+      <span class="ml-3">There aren't any available books. Click <a routerLink="/addBook">here</a> to add a new
+        book.</span>
     </div>
-    <div *ngIf="availableBooks.length &lt; 1" >
-      <span class="ml-3">There aren't any available books. Click <a routerLink="/addBook">here</a> to add a new book.</span>
-    </div>
-    </div>
+  </div>
 </div>
 <div class="container mn-3 mt-1">
-    <div class="row mt-5">
-      <h4 class="ml-3">TAKEN</h4>
-      <div *ngIf="takenBooks.length > 0" >
+  <div class="row mt-5">
+    <h4 class="ml-3">TAKEN</h4>
+    <div *ngIf="takenBooks.length > 0">
       <div class="col-md-3" style="display: inline;" *ngFor="let book of takenBooks">
         <div class="ibox" style="display: inline-block !important;">
           <div class="ibox-content product-box">
-            <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 20px; margin-right: 20px;">
+            <div class="product-imitation"
+              style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 20px; margin-right: 20px;">
             </div>
             <div class="product-desc">
               <span class="product-price bg-danger ">
@@ -52,15 +55,15 @@
               <hr>
               <br>
               <div class="m-t text-righ grid">
-
-              </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div *ngIf="takenBooks.length < 1" >
-        <span class="ml-3">There aren't any taken books. A book will be considered as taken if you accept a request for that book.</span>
-      </div>
+    </div>
+    <div *ngIf="takenBooks.length &lt; 1">
+      <span class="ml-3">There aren't any taken books. A book will be considered as taken if you accept a request for
+        that book.</span>
+    </div>
   </div>
 </div>
