--- a/frontend/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/frontend/src/app/components/user-profile/user-profile.component.html
@@ -6,7 +6,7 @@
       <div class="text-center card-box">
         <div class="member-card">
           <div class="thumb-xl member-thumb m-b-10 center-block">
-            <img src={{user.imgUrl}} class="img-circle img-thumbnail" alt="profile-image" >
+            <img src={{user.imgUrl}} class="img-circle img-thumbnail" alt="profile-image">
           </div>
           <div class="">
             <h4 class="m-b-5">{{user.fullName}}</h4>
@@ -19,55 +19,57 @@
           </div>
           <ul class="social-links list-group list-group-horizontal text-center">
             <li>
-              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.facebook.com/" data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
+              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.facebook.com/"
+                data-original-title="Facebook"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.twitter.com/" data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
+              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.twitter.com/"
+                data-original-title="Twitter"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.skype.com/" data-original-title="Skype"><i class="fa fa-skype"></i></a>
+              <a data-placement="top" data-toggle="tooltip" class="tooltips" href="https://www.skype.com/"
+                data-original-title="Skype"><i class="fa fa-skype"></i></a>
             </li>
           </ul>
         </div>
-      </div> <!-- end card-box -->
-    </div> <!-- end col -->
-    <div class="col-md-8 col-lg-9">
-    <div class="">
-        <div class="">
-            <ul class="nav nav-tabs navtab-custom">
-                <li class="user-links">
-                    <a href="/addBook" data-toggle="tab" aria-expanded="false">
-                        <span class="visible-xs"><i class="fa fa-plus-square"></i></span>
-                        <span class="hidden-xs"> ADD BOOK</span>
-                    </a>
-                </li>
-                <li class="user-links">
-                    <a href="user/edit-profile" data-toggle="tab" aria-expanded="true">
-                        <span class="visible-xs"><i class="fa fa-cog"></i></span>
-                        <span class="hidden-xs"> EDIT PROFILE</span>
-                    </a>
-                </li>
-                <li class="user-links">
-                    <a href="/user/myRequests" data-toggle="tab" aria-expanded="false">
-                        <span class="visible-xs"><i class="fa fa-send"></i></span>
-                        <span class="hidden-xs"> MY REQUESTS</span>
-                    </a>
-                </li>
-                <li class="user-links">
-                  <a href="/user/incomingRequests" data-toggle="tab" aria-expanded="false">
-                      <span class="visible-xs"><i class="fa fa-envelope"></i></span>
-                      <span class="hidden-xs"> INCOMING REQUESTS</span>
-                  </a>
-              </li>
-            </ul>
-            <div class="tab-content">
-              <div class="tab-pane active" id="profile">
-                  <app-my-books></app-my-books>
-              </div>
-            </div>
-            </div>
-        </div> <!-- end col -->
+      </div>
     </div>
-    <!-- end row -->
-</div>
+    <div class="col-md-8 col-lg-9">
+      <div class="">
+        <div class="">
+          <ul class="nav nav-tabs navtab-custom">
+            <li class="user-links">
+              <a href="/addBook" data-toggle="tab" aria-expanded="false">
+                <span class="visible-xs"><i class="fa fa-plus-square"></i></span>
+                <span class="hidden-xs"> ADD BOOK</span>
+              </a>
+            </li>
+            <li class="user-links">
+              <a href="user/edit-profile" data-toggle="tab" aria-expanded="true">
+                <span class="visible-xs"><i class="fa fa-cog"></i></span>
+                <span class="hidden-xs"> EDIT PROFILE</span>
+              </a>
+            </li>
+            <li class="user-links">
+              <a href="/user/myRequests" data-toggle="tab" aria-expanded="false">
+                <span class="visible-xs"><i class="fa fa-send"></i></span>
+                <span class="hidden-xs"> MY REQUESTS</span>
+              </a>
+            </li>
+            <li class="user-links">
+              <a href="/user/incomingRequests" data-toggle="tab" aria-expanded="false">
+                <span class="visible-xs"><i class="fa fa-envelope"></i></span>
+                <span class="hidden-xs"> INCOMING REQUESTS</span>
+              </a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="profile">
+              <app-my-books></app-my-books>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
